--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,9 @@ jobs:
         - "sh -e /etc/init.d/xvfb start"
         # populate .local-firefox for launcher tests
         - PUPPETEER_PRODUCT=firefox npm install
-      script: ./travis/chromium.sh
+      script:
+        - npm run test-install
+        - ./travis/chromium.sh
     - node_js: "10.19.0"
       dist: trusty
       env:
